--- a/man/rmd/rand_forest_ranger.Rmd
+++ b/man/rmd/rand_forest_ranger.Rmd
@@ -97,6 +97,7 @@ rf_reg_spec
 Now we create the model fit object:
 
 ```{r}
+set.seed(1)
 rf_reg_fit <- rf_reg_spec %>% fit(ridership ~ ., data = Chicago_train)
 rf_reg_fit
 ```
@@ -125,6 +126,7 @@ rf_cls_spec
 Now we create the model fit object:
 
 ```{r}
+set.seed(1)
 rf_cls_fit <- rf_cls_spec %>% fit(Class ~ ., data = data_train)
 rf_cls_fit
 ```
