--- a/man/rmd/svm_linear_LiblineaR.Rmd
+++ b/man/rmd/svm_linear_LiblineaR.Rmd
@@ -89,6 +89,7 @@ svm_reg_spec
 Now we create the model fit object:
 
 ```{r}
+set.seed(1)
 svm_reg_fit <- svm_reg_spec %>% fit(ridership ~ ., data = Chicago_train)
 svm_reg_fit
 ```
@@ -117,6 +118,7 @@ svm_cls_spec
 Now we create the model fit object:
 
 ```{r}
+set.seed(1)
 svm_cls_fit <- svm_cls_spec %>% fit(Class ~ ., data = data_train)
 svm_cls_fit
 ```
