--- a/man/rmd/svm_poly_kernlab.Rmd
+++ b/man/rmd/svm_poly_kernlab.Rmd
@@ -72,6 +72,68 @@ Note that the `kernlab` engine does not naturally estimate class probabilities. 
 ```{r child = "template-same-scale.Rmd"}
 ```
 
+## Working examples
+
+```{r child = "template-reg-chicago.Rmd"}
+```
+
+We can define the model with specific parameters:
+
+```{r}
+svm_reg_spec <- 
+  svm_poly(cost = 1, margin = 0.1) %>% 
+  # This model can be used for classification or regression, so set mode
+  set_mode("regression") %>% 
+  set_engine("kernlab")
+svm_reg_spec
+```
+
+Now we create the model fit object:
+
+```{r}
+set.seed(1)
+svm_reg_fit <- svm_reg_spec %>% fit(ridership ~ ., data = Chicago_train)
+svm_reg_fit
+```
+
+The holdout data can be predicted:
+
+```{r}
+predict(svm_reg_fit, Chicago_test)
+```
+
+
+```{r child = "template-cls-two-class.Rmd"}
+```
+
+Since there are two classes, we'll use an odd number of neighbors to avoid ties: 
+
+```{r}
+svm_cls_spec <- 
+  svm_poly(cost = 1) %>% 
+  # This model can be used for classification or regression, so set mode
+  set_mode("classification") %>% 
+  set_engine("kernlab")
+svm_cls_spec
+```
+
+Now we create the model fit object:
+
+```{r}
+set.seed(1)
+svm_cls_fit <- svm_cls_spec %>% fit(Class ~ ., data = data_train)
+svm_cls_fit
+```
+
+The holdout data can be predicted for both hard class predictions and probabilities. We'll bind these together into one tibble:
+
+```{r}
+predict(svm_cls_fit, data_test, type = "prob") %>% 
+  bind_cols(
+    predict(svm_cls_fit, data_test)
+  )
+```
+
 ## References
 
  - Lin, HT, and R Weng. ["A Note on Platt’s Probabilistic Outputs for Support Vector Machines"](https://www.csie.ntu.edu.tw/~cjlin/papers/plattprob.pdf)
