--- a/man/rmd/rand_forest_randomForest.Rmd
+++ b/man/rmd/rand_forest_randomForest.Rmd
@@ -104,6 +104,8 @@ predict(rf_reg_fit, Chicago_test)
 ```{r child = "template-cls-two-class.Rmd"}
 ```
 
+We can define the model with specific parameters:
+
 ```{r}
 rf_cls_spec <- 
   rand_forest(trees = 200, min_n = 5) %>% 
