--- a/man/rmd/svm_rbf_kernlab.Rmd
+++ b/man/rmd/svm_rbf_kernlab.Rmd
@@ -106,6 +106,8 @@ predict(svm_reg_fit, Chicago_test)
 ```{r child = "template-cls-two-class.Rmd"}
 ```
 
+We can define the model with specific parameters:
+
 ```{r}
 svm_cls_spec <- 
   svm_rbf(cost = 1) %>% 
