--- a/man/rmd/logistic_reg_stan.Rmd
+++ b/man/rmd/logistic_reg_stan.Rmd
@@ -15,7 +15,7 @@ Some relevant arguments that can be passed to `set_engine()`:
  * `iter`: A positive integer specifying the number of iterations for each chain (including warmup). The default is 2000.
  * `seed`: The seed for random number generation. 
  * `cores`: Number of cores to use when executing the chains in parallel.
- * `prior`: The prior distribution for the (non-hierarchical) regression coefficients. The `stan` engine does not fit any hierarchical terms. See the `stan_glmer` engine from the `multilevelmod` package for that type of model. 
+ * `prior`: The prior distribution for the (non-hierarchical) regression coefficients. The `"stan"` engine does not fit any hierarchical terms. See the `"stan_glmer"` engine from the \pkg{multilevelmod} package for that type of model. 
  * `prior_intercept`: The prior distribution for the intercept (after centering all predictors). 
  
 See [rstan::sampling()] and [rstanarm::priors()] for more information on these and other options.  
@@ -37,7 +37,7 @@ Note that the `refresh` default prevents logging of the estimation process. Chan
 
 ## Other details
 
-For prediction, the `stan` engine can compute posterior  intervals analogous to confidence and prediction intervals. In  these instances, the units are the original outcome and when `std_error = TRUE`, the standard deviation of the posterior  distribution (or posterior predictive distribution as  appropriate) is returned.
+For prediction, the `"stan"` engine can compute posterior intervals analogous to confidence and prediction intervals. In these instances, the units are the original outcome and when `std_error = TRUE`, the standard deviation of the posterior  distribution (or posterior predictive distribution as appropriate) is returned.
 
 ## References
 
