Finish up details pages, and document

--- a/man/rmd/mlp_nnet.Rmd
+++ b/man/rmd/mlp_nnet.Rmd
@@ -49,7 +49,7 @@ mlp(
   translate()
 ```
 
-Note that \pkg{parsnip} automatically sets linear activation in the last layer. 
+Note that parsnip automatically sets linear activation in the last layer. 
 
 ## Translation from parsnip to the original package (classification)
 
