--- a/man/rmd/boost_tree_xgboost.Rmd
+++ b/man/rmd/boost_tree_xgboost.Rmd
@@ -35,7 +35,7 @@ This model has `r nrow(param)` tuning parameters:
 param$item
 ```
 
-The `mtry` parameter is related to the number of predictors. The default is to use all predictors. [xgboost::xgb.train()] encodes this as a real number between zero and one. \pkg{parsnip} translates the number of columns to this type of value. The user should give the argument to `boost_tree()` as an integer (not a real number). 
+The `mtry` parameter is related to the number of predictors. The default is to use all predictors. [xgboost::xgb.train()] encodes this as a real number between zero and one. parsnip translates the number of columns to this type of value. The user should give the argument to `boost_tree()` as an integer (not a real number). 
 
 ## Translation from parsnip to the original package (regression)
 
@@ -67,7 +67,7 @@ boost_tree(
 
 ## Preprocessing requirements
 
-\pkg{xgboost} does not have a means to translate factor predictors to grouped splits. Factor/categorical predictors need to be converted to numeric values (e.g., dummy or indicator variables) for this engine. When using the formula method via [fit.model_spec()], \pkg{parsnip} will convert factor columns to indicators using a one-hot encoding.
+xgboost does not have a means to translate factor predictors to grouped splits. Factor/categorical predictors need to be converted to numeric values (e.g., dummy or indicator variables) for this engine. When using the formula method via [fit.model_spec()], parsnip will convert factor columns to indicators using a one-hot encoding.
 
 For classification, non-numeric outcomes (i.e., factors) are internally converted to numeric. For binary classification, the `event_level` argument of `set_engine()` can be set to either `"first"` or `"second"` to specify which level should be used as the event. This can be helpful when a watchlist is used to monitor performance from with the xgboost training process.  
 
@@ -75,7 +75,7 @@ For classification, non-numeric outcomes (i.e., factors) are internally converte
 
 ### Sparse matrices
 
-\pkg{xgboost} requires the data to be in a sparse format. If your predictor data are already in this format, then use [fit_xy.model_spec()] to pass it to the model function. Otherwise, \pkg{parsnip} converts the data to this format. 
+xgboost requires the data to be in a sparse format. If your predictor data are already in this format, then use [fit_xy.model_spec()] to pass it to the model function. Otherwise, parsnip converts the data to this format. 
 
 ### Parallel processing
 
@@ -85,13 +85,13 @@ By default, the model is trained without parallel processing. This can be change
 
 The `stop_iter()`  argument allows the model to prematurely stop training if the objective function does not improve within `early_stop` iterations. 
 
-The best way to use this feature is in conjunction with an _internal validation set_. To do this, pass the `validation` parameter of [xgb_train()] via the \pkg{parsnip} [set_engine()] function. This is the proportion of the training set that should be reserved for measuring performance (and stop early). 
+The best way to use this feature is in conjunction with an _internal validation set_. To do this, pass the `validation` parameter of [xgb_train()] via the parsnip [set_engine()] function. This is the proportion of the training set that should be reserved for measuring performance (and stop early). 
 
 If the model specification has `early_stop >= trees`, `early_stop` is converted to `trees - 1` and a warning is issued. 
 
 ### Objective function
 
-\pkg{parsnip} chooses the objective function based on the characteristics of the outcome. To use a different loss, pass the `objective` argument to [set_engine()]. 
+parsnip chooses the objective function based on the characteristics of the outcome. To use a different loss, pass the `objective` argument to [set_engine()]. 
 
 ## References
 
