--- a/man/rmd/glmnet-details.Rmd
+++ b/man/rmd/glmnet-details.Rmd
@@ -5,9 +5,9 @@
 
 The implementation of the glmnet package has some nice features. For example, one of the main tuning parameters, the regularization penalty,  does not need to be specified when fitting the model. The package fits a compendium of values, called the regularization path. These values depend on the data set and the value of `alpha`, the mixture parameter between a pure ridge model (`alpha = 0`) and a pure lasso model (`alpha = 1`). When predicting, any penalty values can be simultaneously predicted, even those that are not exactly on the regularization path. For those, the model approximates between the closest path values to produce a prediction. There is an argument called `lambda` to the `glmnet()` function that is used to specify the path. 
 
-In the discussion below, `linear_reg()` is used. The information is true for all \pkg{parsnip} models that have a `"glmnet"` engine. 
+In the discussion below, `linear_reg()` is used. The information is true for all parsnip models that have a `"glmnet"` engine. 
 
-## Fitting and predicting using \pkg{parsnip}
+## Fitting and predicting using parsnip
 
 Recall that tidymodels uses standardized parameter names across models chosen to be low on jargon. The argument `penalty` is the equivalent of what glmnet calls the `lambda` value and `mixture` is the same as their `alpha` value. 
 
@@ -57,7 +57,7 @@ linear_reg(penalty = 1) %>%
   translate()
 ```
 
-Internally, the value of `penalty = 1` is saved in the \pkg{parsnip} object and no value is set for `lambda`. This enables the full path to be fit by `glmnet()`. See the section below about setting the path. 
+Internally, the value of `penalty = 1` is saved in the parsnip object and no value is set for `lambda`. This enables the full path to be fit by `glmnet()`. See the section below about setting the path. 
 
 ## How do I set the regularization path? 
 
@@ -65,7 +65,7 @@ Regardless of what value you use for `penalty`, the full coefficient path is use
 
 What if you want to manually set this path? Normally, you would pass a vector to `lambda` in [glmnet::glmnet()]. 
 
-\pkg{parsnip} models that use a `glmnet` engine can use a special optional argument called `path_values`. This is _not_ an argument to [glmnet::glmnet()]; it is used by \pkg{parsnip} to independently set the path. 
+parsnip models that use a `glmnet` engine can use a special optional argument called `path_values`. This is _not_ an argument to [glmnet::glmnet()]; it is used by parsnip to independently set the path. 
 
 For example, we have found that if you want a fully ridge regression model (i.e., `mixture = 0`), you can get the _wrong coefficients_ if the path does not contain zero (see [issue #431](https://github.com/tidymodels/parsnip/issues/431#issuecomment-782883848)). 
 
@@ -89,9 +89,9 @@ predict(fit_ridge, mtcars[1:3,])
 
 [broom::tidy()] is a function that gives a summary of the object as a tibble. 
 
-**tl;dr** `tidy()` on a `glmnet` model produced by \pkg{parsnip} gives the coefficients for the value given by `penalty`. 
+**tl;dr** `tidy()` on a `glmnet` model produced by parsnip gives the coefficients for the value given by `penalty`. 
 
-When \pkg{parsnip} makes a model, it gives it an extra class. Use the `tidy()` method on the object, it produces coefficients for the penalty that was originally requested: 
+When parsnip makes a model, it gives it an extra class. Use the `tidy()` method on the object, it produces coefficients for the penalty that was originally requested: 
 
 ```{r tidy-parsnip, message = FALSE}
 tidy(fit)
