--- a/man/rmd/nearest_neighbor_kknn.Rmd
+++ b/man/rmd/nearest_neighbor_kknn.Rmd
@@ -70,7 +70,7 @@ nearest_neighbor(
 ```{r child = "template-same-scale.Rmd"}
 ```
 
-## Working examples
+## Examples
 
 ```{r child = "template-reg-chicago.Rmd"}
 ```
@@ -124,10 +124,10 @@ knn_cls_fit
 The holdout data can be predicted for both hard class predictions and probabilities. We'll bind these together into one tibble:
 
 ```{r}
-predict(knn_cls_fit, data_test, type = "prob") %>% 
-  bind_cols(
-    predict(knn_cls_fit, data_test)
-  )
+bind_cols(
+  predict(knn_cls_fit, data_test),
+  predict(knn_cls_fit, data_test, type = "prob")
+)
 ```
 
 
