--- a/man/rmd/svm_rbf_kernlab.Rmd
+++ b/man/rmd/svm_rbf_kernlab.Rmd
@@ -72,7 +72,7 @@ Note that the `"kernlab"` engine does not naturally estimate class probabilities
 ```{r child = "template-same-scale.Rmd"}
 ```
 
-## Working examples
+## Examples
 
 ```{r child = "template-reg-chicago.Rmd"}
 ```
@@ -128,10 +128,10 @@ svm_cls_fit
 The holdout data can be predicted for both hard class predictions and probabilities. We'll bind these together into one tibble:
 
 ```{r}
-predict(svm_cls_fit, data_test, type = "prob") %>% 
-  bind_cols(
-    predict(svm_cls_fit, data_test)
-  )
+bind_cols(
+  predict(svm_cls_fit, data_test),
+  predict(svm_cls_fit, data_test, type = "prob")
+)
 ```
 
 ## References
