update tree splitting template (and its name)

--- a/man/rmd/boost_tree_C5.0.Rmd
+++ b/man/rmd/boost_tree_C5.0.Rmd
@@ -49,7 +49,7 @@ boost_tree(trees = integer(), min_n = integer(), sample_size = numeric()) %>%
 
 ## Preprocessing requirements
 
-```{r child = "template-split-factors.Rmd"}
+```{r child = "template-tree-split-factors.Rmd"}
 ```
 
 ## Other details
