--- a/man/rmd/decision_tree_rpart.Rmd
+++ b/man/rmd/decision_tree_rpart.Rmd
@@ -55,7 +55,7 @@ decision_tree(tree_depth = integer(1), min_n = integer(1), cost_complexity = dou
 
 ## Preprocessing requirements
 
-```{r child = "template-split-factors.Rmd"}
+```{r child = "template-tree-split-factors.Rmd"}
 ```
 
 ## References
