--- a/man/rmd/rand_forest_spark.Rmd
+++ b/man/rmd/rand_forest_spark.Rmd
@@ -65,7 +65,7 @@ rand_forest(
 
 ## Preprocessing requirements
 
-```{r child = "template-split-factors.Rmd"}
+```{r child = "template-tree-split-factors.Rmd"}
 ```
 
 ## Other details
